--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -20,5 +20,8 @@ jobs:
           node-version: 20
           cache: npm
 
+      - name: Install eslint-plugin-react
+        run: npm install eslint-plugin-react@latest --save-dev
+
       - name: Run ESLint suggestion
         run: npm run lint
